Bug 214859 - Clicking on a shadow DOM does not move the selection to the focused element when delegatesFocus is set to true
Summary: Clicking on a shadow DOM does not move the selection to the focused element w...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on:
Blocks: 148695
  Show dependency treegraph
 
Reported: 2020-07-27 16:41 PDT by Jan Miksovsky
Modified: 2020-07-30 13:14 PDT (History)
9 users (show)

See Also:


Attachments
Fixes the bug (10.02 KB, patch)
2020-07-30 02:36 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Miksovsky 2020-07-27 16:41:18 PDT
Although WebKit has implemented support for the delegatesFocus flag (https://bugs.webkit.org/show_bug.cgi?id=166484), the implementation appears to be incomplete.

To repro, use the same repro from the above bug: https://bug-166484-attachments.webkit.org/attachment.cgi?id=297772

* Clicking the "Hello world" text should focus the input. The input gets a focus ring, but does not appear to have the focus -- you can't type in the input, for example.
* Programmatically invoking the focus() method on that element similarly doesn't not focus the input.
Comment 1 Radar WebKit Bug Importer 2020-07-27 18:19:38 PDT
<rdar://problem/66192901>
Comment 2 Ryosuke Niwa 2020-07-30 02:36:54 PDT
Created attachment 405559 [details]
Fixes the bug
Comment 3 EWS 2020-07-30 13:14:30 PDT
Committed r265092: <https://trac.webkit.org/changeset/265092>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 405559 [details].