Clicking on a shadow DOM does not move the selection to the focused element when delegatesFocus is set to true https://bugs.webkit.org/show_bug.cgi?id=214859 <rdar://problem/66192901>

Reviewed by Wenson Hsieh.

Source/WebCore:

The bug was caused by EventHandler moving the selection to where the user had clicked, not to where the focus
had been delegated, which is a uniquely WebKit behavior. Fixed the bug by revealing the focused element as done
in Element::focus in EventHandler::dispatchMouseEvent and avoid updating the selection to the clicked point
later in EventHandler::handleMousePressEventSingleClick by adding an early exit.

Test: fast/shadow-dom/delegates-focus-and-types-into-input.html

* dom/Element.cpp:
(WebCore::Element::focus):
(WebCore::Element::revealFocusedElement): Extracted from Element::focus.
* dom/Element.h:
* page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEventSingleClick): Added an early exit when dispatchMouseEvent had
delegated the focus to an element different from the one the user had clicked.
(WebCore::EventHandler::dispatchMouseEvent): Added a code to reveal the newly focused element when the focus
had been delegated.
* page/EventHandler.h:

LayoutTests:

Added a regression test.

* fast/shadow-dom/delegates-focus-and-types-into-input-expected.txt: Added.
* fast/shadow-dom/delegates-focus-and-types-into-input.html: Added.


Canonical link: https://commits.webkit.org/227792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265092 268f45cc-cd09-0410-ab3c-d52691b4dbfc