Source/WebCore/page/EventHandler.cpp
@@ -687,7 +687,7 @@ bool EventHandler::handleMousePressEventSingleClick(const MouseEventWithHitTestR
 
     m_frame.document()->updateLayoutIgnorePendingStylesheets();
     Node* targetNode = event.targetNode();
-    if (!(targetNode && targetNode->renderer() && m_mouseDownMayStartSelect))
+    if (!targetNode || !targetNode->renderer() || !m_mouseDownMayStartSelect || m_mouseDownDelegatedFocus)
         return false;
 
     // Extend the selection if the Shift key is down, unless the click is in a link.
@@ -2711,6 +2711,8 @@ bool EventHandler::dispatchMouseEvent(const AtomString& eventType, Node* targetN
     if (eventType != eventNames().mousedownEvent)
         return true;
 
+    m_mouseDownDelegatedFocus = false;
+
     // If clicking on a frame scrollbar, do not make any change to which element is focused.
     auto* view = m_frame.view();
     if (view && view->scrollbarAtPoint(platformMouseEvent.position()))
@@ -2730,6 +2732,7 @@ bool EventHandler::dispatchMouseEvent(const AtomString& eventType, Node* targetN
         if (auto* shadowRoot = element->shadowRoot()) {
             if (shadowRoot->delegatesFocus()) {
                 element = findFirstMouseFocusableElementInComposedTree(*element);
+                m_mouseDownDelegatedFocus = true;
                 break;
             }
         }
@@ -2757,6 +2760,9 @@ bool EventHandler::dispatchMouseEvent(const AtomString& eventType, Node* targetN
     auto* page = m_frame.page();
     if (page && !page->focusController().setFocusedElement(element.get(), m_frame))
         return false;
+
+    if (m_mouseDownDelegatedFocus)
+        element->revealFocusedElement(SelectionRestorationMode::SetDefault);
 
     return true;
 }
